--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,9 +24,36 @@
 
 </head>
 <body>
-<!-- {{customer.name}} {{customer.email}} -->
+
+<a href="/">All</a>
+<a href="/?category=Alcohol">Alcohol</a>
+<a href="/?category=Food">Food</a>
+<a href="/?category=Furniture">Furniture</a>
+<a href="/?category=Jewelry">Jewelry</a>
+<a href="/?category=Shoes">Shoes</a>
+<a href="/?category=Toiletries">Toiletries</a>
 
 
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Category</th>
+        <th>Credit Card</th>
+        <th>CVV</th>
+        <th>Date</th>
+    </tr>
+    {{#purchases}}
+    <tr>
+        <td>{{customer.name}}</td>
+        <td>{{customer.email}}</td>
+        <td>{{category}}</td>
+        <td>{{credit_card}}</td>
+        <td>{{cvv}}</td>
+        <td>{{date}}</td>
+    </tr>
+    {{/purchases}}
+</table>
 
 </body>
 </html>
