--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,6 +23,9 @@
 </head>
 <body>
 <div>Filter Results:&nbsp
+    <select>
+        
+    </select>
     <a href="/">ALL</a>&nbsp|&nbsp
     <a href="/?category=Alcohol">Alcohol</a>&nbsp|&nbsp
     <a href="/?category=Furniture">Furniture</a>&nbsp|&nbsp
