--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,8 +33,8 @@
 
 <table>
     <tr>
-        <th><a href="/?sortField=name{{#name}}&order=desc{{/name}}">Name</a></th>
-        <th><a href="/?sortField=email{{#email}}&order=desc{{/email}}">Email</a></th>
+        <th><a href="/?sortField=Customer.name{{#Customer.name}}&order=desc{{/Customer.name}}">Name</a></th>
+        <th><a href="/?sortField=Customer.email{{#Customer.email}}&order=desc{{/Customer.email}}">Email</a></th>
         <th><a href="/?sortField=category{{#category}}&order=desc{{/category}}">Category</a></th>
         <th><a href="/?sortField=creditCard{{#creditCard}}&order=desc{{/creditCard}}">Credit Card</a></th>
         <th><a href="/?sortField=cvv{{#cvv}}&order=desc{{/cvv}}">CVV</a></th>
