--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,12 +19,12 @@
 
 <table>
     <tr>
-        <th><a href="/?sortField=Customer.name{{#Customer.name}}&order=desc{{/Customer.name}}">Name</a></th>
-        <th><a href="/?sortField=Customer.email{{#Customer.email}}&order=desc{{/Customer.email}}">Email</a></th>
-        <th><a href="/?sortField=category{{#category}}&order=desc{{/category}}">Category</a></th>
-        <th><a href="/?sortField=creditCard{{#creditCard}}&order=desc{{/creditCard}}">Credit Card</a></th>
-        <th><a href="/?sortField=cvv{{#cvv}}&order=desc{{/cvv}}">CVV</a></th>
-        <th><a href="/?sortField=date{{#date}}&order=desc{{/date}}">Date</a></th>
+        <th><a href="/?categoryLimit={{categoryLimit}}&sortField=Customer.name{{#Customer.name}}&order=desc{{/Customer.name}}">Name</a></th>
+        <th><a href="/?categoryLimit={{categoryLimit}}&sortField=Customer.email{{#Customer.email}}&order=desc{{/Customer.email}}">Email</a></th>
+        <th><a href="/?categoryLimit={{categoryLimit}}&sortField=category{{#category}}&order=desc{{/category}}">Category</a></th>
+        <th><a href="/?categoryLimit={{categoryLimit}}&sortField=creditCard{{#creditCard}}&order=desc{{/creditCard}}">Credit Card</a></th>
+        <th><a href="/?categoryLimit={{categoryLimit}}&sortField=cvv{{#cvv}}&order=desc{{/cvv}}">CVV</a></th>
+        <th><a href="/?categoryLimit={{categoryLimit}}&sortField=date{{#date}}&order=desc{{/date}}">Date</a></th>
     </tr>
     {{#purchases}}
     <tr>
